--- a/src/main/resources/templates/peliculaEditar.html
+++ b/src/main/resources/templates/peliculaEditar.html
@@ -7,39 +7,17 @@
             src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
     </script>
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <style>
-        button{
-            background-color: #1b26f2;
-            border: none;
-            color: white;
-            padding: 10px 27px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            -webkit-transition-duration: 0.4s; /* Safari */
-            transition-duration: 0.4s;
-        }
-    </style>
+    <link href="css/styleButton.css" th:href="@{/css/styleButton.css}" rel="stylesheet" type="text/css">
 </head>
 
 <pre>
     <form id="editarForm">
     IdPelicula:<span id="idpeli" name="idpeli" type="text" th:text="${pelicula.idpeliculas}"/><br>
-    Genero:
-    <select id="selectGenero">
-        <option th:each="genero : ${generos}" th:selected="${pelicula.generosByIdgenero.idgeneros == genero.idgeneros}"
-                th:value="${genero.idgeneros}" th:text="${genero.nombre}">genero
-        </option>
-    </select>
-    <br>
+    Genero:<select id="selectGenero"><option th:each="genero : ${generos}" th:selected="${pelicula.generosByIdgenero.idgeneros == genero.idgeneros}" th:value="${genero.idgeneros}" th:text="${genero.nombre}">genero</option></select><br>
     Nombre: <input id="nombre" type="text" name="nombre" th:value="${pelicula.nombre}" required/><br>
     <button type="submit" value="Submit">Submit</button>
     </form>
 </pre>
-
 <br>
 <button>
     <a class="button1" name="volver"  style="cursor:pointer; color: #f2f2f2"
