--- a/src/main/resources/templates/generosCrear.html
+++ b/src/main/resources/templates/generosCrear.html
@@ -6,37 +6,21 @@
     <script
             src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
     </script>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-    <style>
-        button{
-            background-color: #1b26f2;
-            border: none;
-            color: white;
-            padding: 10px 27px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            -webkit-transition-duration: 0.4s; /* Safari */
-            transition-duration: 0.4s;
-        }
-    </style>
+    <link href="css/styleCrear.css" th:href="@{/css/styleCrear.css}" rel="stylesheet" type="text/css">
 </head>
 
 <pre>
     <form id="crearForm">
     Nombre: <input id="nombre" type="text" pattern="^[a-zA-Z]+$" name="nombre" required/><br>
     <button type="submit" value="Submit">Submit</button>
-            <a class="button1" name="volver" style="cursor:pointer; color: #f2f2f2"
-               href="/peliculas/crear">Volver</a>
-
 </form>
-
-
 </pre>
 
+<br>
+<button>
+    <a class="button1" name="volver" style="cursor:pointer; color: #f2f2f2"
+       href="/peliculas/crear">Volver</a>
+</button>
 </body>
 </html>
 
