--- a/src/main/resources/templates/peliculaCrear.html
+++ b/src/main/resources/templates/peliculaCrear.html
@@ -6,42 +6,21 @@
     <script
             src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
     </script>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-    <style>
-        button {
-            background-color: #1b26f2;
-            border: none;
-            color: white;
-            padding: 10px 27px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            -webkit-transition-duration: 0.4s; /* Safari */
-            transition-duration: 0.4s;
-        }
-    </style>
+    <link href="css/styleCrear.css" th:href="@{/css/styleCrear.css}" rel="stylesheet" type="text/css">
+
 </head>
 
 <body>
-    <pre>
         <form id="crearForm">
-             Nombre: <input id="nombre" type="text" name="nombre" required/><br>
-             Genero:
-            <select id="selectGenero">
-                <option th:each="genero : ${generos}" th:value="${genero.idgeneros}"
-                        th:text="${genero.nombre}">genero</option>
-            </select>
-            <button type="submit" value="Submit">Submit</button>
+            <pre>
+             Nombre:<input id="nombre" type="text" name="nombre" required/><br>
+             Genero:<select id="selectGenero"><option th:each="genero : ${generos}" th:value="${genero.idgeneros}" th:text="${genero.nombre}">genero</option></select>
+             Stock:<input id="stock" type="text" name="stock" required/><br>
+            <button type="submit" value="Submit">Submit</button> <button><a class="button1" name="Crear Genero" style="cursor:pointer; color: #f2f2f2" href="/generos/crear">Crear Género</a></button>
+            </pre>
 </form>
-    </pre>
+
 <br>
-    <button>
-        <a class="button1" name="crear" style="cursor:pointer;color: #f2f2f2"
-           href="/generos/crear">Crear Genero</a>
-    </button>
     <button>
         <a class="button1" name="volver" style="cursor:pointer; color: #f2f2f2"
            href="/peliculas">Volver</a>
@@ -55,13 +34,13 @@
         event.preventDefault();
         var form = $(this);
         var url = '/peliculas';
-        var pelicula =
+        var peliculaData =
             {
                 "nombre": form.find('input[name="nombre"]').val(),
                 "generosByIdgenero": {
                     "idgeneros": document.getElementById('selectGenero').value,
                     "nombre": document.getElementById('selectGenero').textContent,
-                }
+                },
             }
 
         var jsonString = JSON.stringify(pelicula);
