--- a/src/main/resources/static/css/styleCrear.css
+++ b/src/main/resources/static/css/styleCrear.css
@@ -8,6 +8,16 @@ input[type=text], select {
     box-sizing: border-box;
 }
 
+/*input[type=number], select {*/
+    /*width: 250px;*/
+    /*padding: 12px 20px;*/
+    /*margin: 8px 0;*/
+    /*display: inline-block;*/
+    /*border: 1px solid #ccc;*/
+    /*border-radius: 4px;*/
+    /*box-sizing: border-box;*/
+/*}*/
+
 a{
     cursor:pointer;
     color: #f2f2f2;
