--- a/src/main/resources/templates/alquileresCrear.html
+++ b/src/main/resources/templates/alquileresCrear.html
@@ -10,11 +10,14 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/styleButton.css" th:href="@{/css/styleButton.css}" rel="stylesheet" type="text/css">
 </head>
-    <form id="crearForm">
+<form id="crearForm">
         <pre>
-            Cliente: <input list="clientes" id="cliente" type="text" name="cliente"/><datalist id="clientes"><option th:each="row : ${listaClientes}" th:data-value="${row.idcliente}" th:value="${row.nombre}"></datalist><br>
+            Cliente: <input list="clientes" id="cliente" type="text" name="cliente" required/><datalist id="clientes"><option
+                th:each="row : ${listaClientes}" th:data-value="${row.idcliente}"
+                th:value="${row.nombre}"></datalist><br>
             Fecha Alquiler:<input id="fechaalquiler" type="date" name="fechaalquiler" readonly/><br>
-            Fecha Devolucion:<input id="fechadevuelto" type="date" name="fechadevuelto"/><br>
+            Fecha Devolucion:<input id="fechadevuelto" type="date" name="fechadevuelto" min=today max="2019-12-31"
+                                    required/><br>
             Pelicula: <input list="peliculas" id="pelicula" type="text" name="pelicula"/>
             <datalist id="peliculas">
                 <option th:each="row : ${listaPeliculas}" th:data-value="${row.idpeliculas}" th:value="${row.nombre}">
@@ -48,6 +51,24 @@
         return (((dateEnd - dateStart) / 86400) / 1000);
     }
 </script>
+
+
+
+<script>
+    var today = new Date();
+    var dd = today.getDate();
+    var mm = today.getMonth() + 1; //January is 0!
+    var yyyy = today.getFullYear();
+    if (dd < 10) {
+        dd = '0' + dd
+    }
+    if (mm < 10) {
+        mm = '0' + mm
+    }
+
+    today = yyyy + '-' + mm + '-' + dd;
+    document.getElementById("fechadevuelto").setAttribute("min", today);
+</script>
 <script>
     var listaPeliculas = [];
     $('#tablaPeliculas').hide();
@@ -56,7 +77,7 @@
     var today = new Date();
     myDate.value = today.toISOString().substr(0, 10);
 
-    $("#crearForm").submit(function(event) {
+    $("#crearForm").submit(function (event) {
         // Prevent the form from submitting via the browser.
         event.preventDefault();
 
@@ -66,8 +87,8 @@
             "']").dataset.value;
         var nompeli2send = document.getElementById("pelicula").value;
         var peli = {
-            idpeliculas : idpeli2send,
-            nombre : nompeli2send
+            idpeliculas: idpeli2send,
+            nombre: nompeli2send
         }
 
         // store customer
@@ -97,9 +118,9 @@
         $("#pelicula").val("");
 
     });
-    $(document).on("click","a",function() {
+    $(document).on("click", "a", function () {
         var peliculaId = $(this).parent().find('input').val();
-        listaPeliculas.splice(peliculaId,1);
+        listaPeliculas.splice(peliculaId, 1);
         $(this).closest("tr").remove()
     });
 
@@ -111,7 +132,7 @@
         var user2send = document.querySelector("#clientes option[value='" +
             document.getElementById("cliente").value
             + "']").dataset.value;
-        listaPeliculas.forEach(function(pelicula) {
+        listaPeliculas.forEach(function (pelicula) {
             var alquiler =
                 {
                     "clienteByIdcliente": {
@@ -142,5 +163,5 @@
 
         });
     });
-
 </script>
+
