--- a/src/main/resources/templates/generosCrear.html
+++ b/src/main/resources/templates/generosCrear.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Crear Género</title>
     <script
             src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
     </script>
@@ -11,7 +11,7 @@
 
 <pre>
     <form id="crearForm">
-    Nombre: <input id="nombre" type="text" pattern="^[a-zA-Z]+$" name="nombre" required/><br>
+    Nombre: <input id="nombre" type="text" pattern="^[a-zA-Z ]+$" name="nombre" required/><br>
     <button type="submit" value="Submit">Submit</button>
 </form>
 </pre>
