--- a/src/main/resources/templates/usuarioCrear.html
+++ b/src/main/resources/templates/usuarioCrear.html
@@ -12,8 +12,8 @@
 <body>
 <pre>
 <form id="crearForm">
-    Nombre: <input id="nombre" type="text" pattern="^[a-zA-Z]+$" name="nombre" required/><br>
-    DNI:    <input id="dni" type="number" name="dni" min="1" max="99999999" required/><br>
+    Nombre: <input id="nombre" type="text" pattern="^[a-zA-Z ]+$" name="nombre" required/><br>
+    DNI:    <input id="dni" type="number" name="dni" min="1000000" max="99999999" style="width: 250px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;border-radius: 4px;box-sizing: border-box;" required/><br>
     <button type="submit" value="Submit">Submit</button>
 </form>
     </pre>
