--- a/src/main/resources/templates/usuarioEditar.html
+++ b/src/main/resources/templates/usuarioEditar.html
@@ -14,8 +14,8 @@
     <form id="editarForm" >
     <
         IDCliente:<span id="id" name = "id" type="text" th:text="${usuario.idcliente}"/><br>
-        Nombre: <input id="nombre" type="text" pattern="^[a-zA-Z]+$" name="nombre" th:value="${usuario.nombre}" required/><br>
-        DNI: <input id="dni" type="text" min="1" max="99999999" name="dni" th:value="${usuario.dni}" required/><br>
+        Nombre: <input id="nombre" type="text" pattern="^[a-zA-Z ]+$" name="nombre" th:value="${usuario.nombre}" required/><br>
+        DNI: <input id="dni" type="text" min="1000000" max="99999999" name="dni" th:value="${usuario.dni}" required/><br>
         <button type="submit" value="Submit">Submit</button>
     </form>
 </pre>
