--- a/src/main/resources/templates/usuarioPeliculas.html
+++ b/src/main/resources/templates/usuarioPeliculas.html
@@ -3,23 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>PeliculasDeUsuario</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-    <style>
-        button {
-            background-color: #1b26f2;
-            border: none;
-            color: white;
-            padding: 10px 27px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            s margin: 4px 2px;
-            cursor: pointer;
-            -webkit-transition-duration: 0.4s; /* Safari */
-            transition-duration: 0.4s;
-        }
-    </style>
+    <script
+            src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+    </script>
+    <link href="css/style.css" th:href="@{/css/style.css}" rel="stylesheet" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link href="css/styleButton.css" th:href="@{/css/styleButton.css}" rel="stylesheet" type="text/css">
 </head>
 
 <body>
